infrastructure/templates/k8/components/development/ingress/development-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: development-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-targer: /
spec:
  ingressClassName:  nginx-dev
  rules:
    - 
      host: dev.domain.boats
      http:
        paths:
          - path: "/auth"
            pathType: Prefix
            backend:
              service:
                name: backend-auth-dev
                port:
                  number: 80
  tls:
    -
      hosts:
        - dev.domain.boats
      secretName: dev-tls-secret
